BUG padding added to classes.html is not responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,9 @@ body {
 }
 
 .classes-container {
+    padding-top: 10px;
+    padding-left: 80px;
+    padding-right: 80px;
     max-width: 100%;
     margin-left: 0;
     margin-right: 0;
